# py2048

./: .gitignore  LICENSE  Makefile  pyproject.toml
.github/: pr-labeler.yml
.github/chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: check-dependency-updates.yml  ci-checks.yml  pr-labeler.yml  publish.yml  release.yml
src/py2048/: __main__.py  game.py
src/py2048/models/: board.py
src/py2048/user_interfaces/: __init__.py  interactive_interface_base.py  simple_cli_interface.py
tests/unit/: test_board.py
